--- a/notes.tex
+++ b/notes.tex
@@ -42,6 +42,8 @@
 
 % Ch04 - Differentiable Manifolds %
 \usepackage{bbding}
+\newcommand{\flower}{{\scalebox{0.75}{\FiveFlowerOpen} }}
+\DeclareMathOperator{\diffIso}{\cong_{\text{diff}}}
 
 \makeatletter
 \def\input@path{{Ch01 - Axiomatic Set Theory/}{Ch02 - Topological Spaces/}{Ch03 - Topological Manifolds and Bundles/}{Ch04 - Differentiable Manifolds/}}
