--- a/handout.sty
+++ b/handout.sty
@@ -343,7 +343,7 @@
 %% Definition %%
 
 \mdfdefinestyle{mdpinkbox}{
-    backgroundcolor=retropink!20!white,
+    % backgroundcolor=retropink!20!white,
     nobreak=true,
     innertopmargin=5pt,
     innerleftmargin=7pt,
@@ -360,7 +360,7 @@
     mdframed={style=mdpinkbox},
     spaceabove={0pt},
     spacebelow={2pt},
-    bodyfont={\normalfont},
+    bodyfont={\normalfont\itshape},
     headindent={0pt},
     notefont={\sffamily\bfseries},
     headfont={\color{retropink}\sffamily\bfseries},
@@ -407,7 +407,7 @@
 %% Example %%
 
 \mdfdefinestyle{mdgreenbox}{
-    backgroundcolor=thmgreen!30!white,
+    % backgroundcolor=thmgreen!30!white,
     nobreak=false,
     innerleftmargin=5pt,
     innerrightmargin=5pt,
@@ -704,7 +704,7 @@
         \ihead{\sffamily\bfseries\footnotesize{Lecture Notes}}
         \chead{}
         \cfoot{\thepage}
-        \ohead{\sffamily\footnotesize\textbf{Geometric Anatomy of Theoretical Physics}}
+        \ohead{\sffamily\footnotesize\textbf{Geometrical Anatomy of Theoretical Physics}}
         \ofoot{}
     }
 \else
