--- a/handout.sty
+++ b/handout.sty
@@ -129,6 +129,7 @@
 \newcommand{\SH}{\mathcal H}
 \newcommand{\SO}{\mathcal O}
 \newcommand{\SM}{\mathcal M}
+\newcommand{\ST}{\mathcal T}
 
 %% Linear Algebra Specific %%
 \ifsinghlinear
