--- a/Ch03 - Topological Manifolds and Bundles/lec06.tex
+++ b/Ch03 - Topological Manifolds and Bundles/lec06.tex
@@ -5,7 +5,7 @@ Roughly speaking, a topological manifold is a topological space that locally loo
 \section{Definition and Construction of Topological Manifolds}
 
 \begin{definition}[Topological Manifold]
-	A paracompact Hausdorff topological space \((M, \O)\) is called a \emph{d-dimensional (topological) manifold} if for every \(p \in M\) there exists an open neighborhood \(U_p \in \O\) of \(p\) and a homeomorphism \(x: U_p \to x(U_p) \subseteq \R^d\). And we write \(\dim{M} = d\).
+	A paracompact Hausdorff topological space \((M, \O)\) is called a \emph{\(d\)-dimensional (topological) manifold} if for every \(p \in M\) there exists an open neighborhood \(U_p \in \O\) of \(p\) and a homeomorphism \(x: U_p \to x(U_p) \subseteq \R^d\). And we write \(\dim{M} = d\).
 \end{definition}
 
 \begin{example}
@@ -438,10 +438,10 @@ From now on, we will be focusing on locally trivial bundles unless mentioned oth
 	\begin{equation}
 		\begin{aligned}
 			x^i: U & \to \R                \\
-			p      & \mapsto \proj_i(x(p))
+			p      & \mapsto \proj^i(x(p))
 		\end{aligned}
 	\end{equation}
-	for \(1 \le i \le d\), where \(\proj_i\) is the \(i\)-component of \(x(p) \in \R^d\). The \(x^i(p)\)'s are called \emph{co-ordinate} of the point \(p \in U\) with respect to the chart \((U, x)\).
+	for \(1 \le i \le d\), where \(\proj^i\) is the \(i\)-component of \(x(p) \in \R^d\). The \(x^i(p)\)'s are called \emph{co-ordinate} of the point \(p \in U\) with respect to the chart \((U, x)\).
 \end{remark}
 
 \begin{definition}[Atlas]\label{def:atlas}
