--- a/Ch04 - Differentiable Manifolds/ch04.tex
+++ b/Ch04 - Differentiable Manifolds/ch04.tex
@@ -1,7 +1,9 @@
 \chapter{Differentiable Manifolds}
 
-\input{lec07.tex}\\
-\pagebreak
+% \input{lec07.tex}\\
+% \pagebreak
 \input{lec08.tex}
 
 \input{lec09.tex}
+
+\input{lec10.tex}
