--- a/Ch03 - Topological Manifolds and Bundles/lec06.tex
+++ b/Ch03 - Topological Manifolds and Bundles/lec06.tex
@@ -147,8 +147,8 @@ Counterexample: M\"obius strip is not a product manifold.
 	\end{equation}
 \end{definition}
 
-\begin{definition}[Fibre]\label{def:fibre}
-	Let \((E, \pi, M)\) be a bundle and \(p \in M\). Then the set \(F_p := \preimg_{\pi}(\qty{p})\) is called the \emph{fibre} over \(p\).
+\begin{definition}[Fiber]\label{def:fiber}
+	Let \((E, \pi, M)\) be a bundle and \(p \in M\). Then the set \(F_p := \preimg_{\pi}(\qty{p})\) is called the \emph{fiber} over \(p\).
 \end{definition}
 
 \begin{example}[Product Bundle]
@@ -159,7 +159,7 @@ Counterexample: M\"obius strip is not a product manifold.
 \begin{example}[M\"obius Strip as a Bundle]
 	Consider the M\"obius strip as a bundle. Define the total space \(E\) as the M\"obius strip and the projection map \(\pi: E \to S^1\) as the projection of the M\"obius strip onto the circle. Then \((E, \pi, S^1)\) is a bundle.
 
-	It is easy to see that the fibre over any point \(p \in S^1\) is a line segment. See \cref{fig:moebius-strip-bundle}.
+	It is easy to see that the fiber over any point \(p \in S^1\) is a line segment. See \cref{fig:moebius-strip-bundle}.
 	\begin{equation}
 		\forall p \in S^1: F_p = [-1, 1]
 	\end{equation}
@@ -185,7 +185,7 @@ Counterexample: M\"obius strip is not a product manifold.
 	\end{figure}
 \end{example}
 
-In both the examples, the fibre over any point in the base space is the same. But this is not necessary. The fibre can be different over different points in the base space.
+In both the examples, the fiber over any point in the base space is the same. But this is not necessary. The fiber can be different over different points in the base space.
 \begin{example}
 	Consider the base space \(M = \R\) and the total space as defined in \cref{fig:nontrivial-bundle}.
 	\begin{figure}[H]
@@ -209,7 +209,7 @@ In both the examples, the fibre over any point in the base space is the same. Bu
 		\caption{Total Space \(E\)}
 		\label{fig:nontrivial-bundle}
 	\end{figure}
-	Here, the fibre over every point in the base space is not the same.
+	Here, the fiber over every point in the base space is not the same.
 	\begin{equation}
 		\forall p \in \R: F_p \topIso \begin{cases}
 			S^1         & \text{if}\ p < 0 \\
@@ -219,15 +219,15 @@ In both the examples, the fibre over any point in the base space is the same. Bu
 	\end{equation}
 \end{example}
 
-\subsection{Fibre Bundles}
+\subsection{Fiber Bundles}
 
-\begin{definition}[Fibre Bundle]
-	Let \(E \xrightarrow[]{\ \pi\ } M\) be a bundle. Then \((E, \pi, M)\) is called a \emph{fibre bundle} if
+\begin{definition}[Fiber Bundle]
+	Let \(E \xrightarrow[]{\ \pi\ } M\) be a bundle. Then \((E, \pi, M)\) is called a \emph{fiber bundle} if
 	\begin{equation}
 		\exists F (=\text{topological space}): \forall p \in M: F_p \topIso F
 	\end{equation}
 \end{definition}
-We can think of a fibre bundle as an attachment of a copy of the fibre \(F\) to each point of the base space \(M\). Notationally, we write
+We can think of a fiber bundle as an attachment of a copy of the fiber \(F\) to each point of the base space \(M\). Notationally, we write
 \begin{equation}
 	\begin{tikzcd}
 		F \arrow[r] & E \arrow[d, "\pi"] \\
@@ -235,14 +235,14 @@ We can think of a fibre bundle as an attachment of a copy of the fibre \(F\) to 
 	\end{tikzcd}
 \end{equation}
 
-It is easy to see that the product bundle is a fibre bundle. But the converse is not true.
-\begin{example}[M\"obius Strip as a Fibre Bundle]
-	Let M\"obius strip be our total space and 1-sphere \(S^1\) be our base space. Then the M\"obius strip is a fibre bundle over the 1-sphere with the typical fibre \([-1, 1]\). See \cref{fig:moebius-strip-bundle}.\\
+It is easy to see that the product bundle is a fiber bundle. But the converse is not true.
+\begin{example}[M\"obius Strip as a Fiber Bundle]
+	Let M\"obius strip be our total space and 1-sphere \(S^1\) be our base space. Then the M\"obius strip is a fiber bundle over the 1-sphere with the typical fiber \([-1, 1]\). See \cref{fig:moebius-strip-bundle}.\\
 	Keep in mind that \(E \ne S^1 \times [-1, 1]\) \ie\ M\"obius strip is not a product bundle.
 \end{example}
 
 \begin{example}[\(\C^1\)-line bundle]
-	A \(\C\)-line bundle over \(M\) is the fibre bundle \((E,\pi,M)\) with fibre \(\C\). \\
+	A \(\C\)-line bundle over \(M\) is the fiber bundle \((E,\pi,M)\) with fiber \(\C\). \\
 	Note that \(M \times \C \xrightarrow[]{\ \pi\ } M\) is a \(\C\)-line bundle over \(M\), but a \(\C\)-line bundle over \(M\) need not be a product bundle.
 \end{example}
 
@@ -250,7 +250,7 @@ It is easy to see that the product bundle is a fibre bundle. But the converse is
 	Let \(E \xrightarrow[]{\ \pi\ } M\) be a bundle. A map \(\sigma: M \to E\) is called a (\emph{cross}-)\emph{section} of the bundle if \(\pi \circ \sigma = \id_M\).
 \end{definition}
 
-Intuitively, a section is a map \(\sigma\) which sends each point \(p \in M\) to some point \(\sigma(p)\) in its fibre \(F_p\), so that the projection map \(\pi\) takes \(\sigma(p) \in F_p \subseteq E\) back to the point \(p \in M\).
+Intuitively, a section is a map \(\sigma\) which sends each point \(p \in M\) to some point \(\sigma(p)\) in its fiber \(F_p\), so that the projection map \(\pi\) takes \(\sigma(p) \in F_p \subseteq E\) back to the point \(p \in M\).
 
 \begin{example}[Special Case for Product Bundles]
 	Let \(M \times F \xrightarrow[]{\ \pi\ } M\) be a product bundle. Let \(s: M \to F\) be a map. Then the map
@@ -267,14 +267,14 @@ In case of product bundles, we can analyze `section' of the bundle by looking at
 
 \noindent With this we can order the bundles as follows:
 \begin{equation}
-	\text{Product Bundles} \subset \text{Fibre Bundles} \subset \text{Bundles}
+	\text{Product Bundles} \subset \text{Fiber Bundles} \subset \text{Bundles}
 \end{equation}
 
 At this point, we can have a physics example (from quantum mechanics) but to understand it fully, we require more maturity.
 \begin{example}[Wave functions]
-	Consider our base space \(M\) to be our physical space (for case \(\R^3\)). The mathematical structure, we are analyzing in quantum mechanics is \(\C^1\)-line bundle over physical space.
+	Consider our base space \(M\) to be our physical space (for case \(\R^3\)). The mathematical structure, we are analyzing in quantum mechanics is \(\C^1\)-line bundle over physical space,
 	\begin{equation}
-		\text{wave function} := \text{section of \((E, \pi, M)\)}
+		\text{wave function} := \text{section of \((E, \pi, M)\)}.
 	\end{equation}
 	In case, \(E\) is a product manifold of \(M\) and \(\C\), then wave function is a function.
 \end{example}
@@ -336,7 +336,7 @@ Bundle isomorphisms are structure-preserving maps between bundles.
 \begin{definition}
 	A bundle \(E \xrightarrow[]{\ \pi\ } M\) is called
 	\begin{enumerate}[(a)]
-		\item \emph{trivial} if it is isomorphic to a product bundle \(M \times F \xrightarrow[]{\ \pi_1\ } M\).
+		\item \emph{trivial} if it is isomorphic to a product bundle \(M \times F \xrightarrow[]{\ \pi_1\ } M\),
 		\item \emph{locally trivial} if it is locally isomorphic to some product bundle.
 	\end{enumerate}
 \end{definition}
@@ -476,7 +476,7 @@ This is obvious to see that this collection is a set, as from the definition of 
 
 Here it may seem like a redundant definition, since \(x_{\alpha}\) and \(x_{\beta}\) are homeomorphisms, the composition map \(x_{\beta} \circ x_{\alpha}\inv\) (or its inverse \(x_{\alpha} \circ x_{\beta}\inv\)) is also a homeomorphism thus continuous. Therefore, any two charts on a topological manifold are \(\SC^0\)-compatible.
 
-This notion will be useful, when we want to talk about differentialable manifolds. In that case, we require the map \(x_{\beta} \circ x_{\alpha}\inv\) to be continuously differentiable or \(k\)-smooth for \(\SC^1\) or \(\SC^k\)-compatible respectively using the notion of differentiability on \(\R^d\).
+This notion will be useful, when we want to talk about differentiable manifolds. In that case, we require the map \(x_{\beta} \circ x_{\alpha}\inv\) to be continuously differentiable or \(k\)-smooth for \(\SC^1\) or \(\SC^k\)-compatible respectively using the notion of differentiability on \(\R^d\).
 
 \begin{remark}[Co-ordinate Change]
 	The map \(\tau_{\alpha, \beta} := x_{\beta} \circ x_{\alpha}\inv\) (and its inverse \(\tau_{\beta, \alpha} := x_{\alpha} \circ x_{\beta}\inv\)) is called the \emph{co-ordinate change map} or \emph{chart transition map}.
@@ -503,7 +503,7 @@ One way to verify this, let an open set in \(M\) and check whether its pre-image
 
 Another way is through the concept of charts. Let \((U, x)\) be a chart, rather than studying \(\gamma\) directly, we will focus on \(x \circ \gamma: \R \supseteq \preimg_{\gamma}(U) \to x(U) \subseteq \R^d\). Checking continuity of this composition map is easier as well as guarantees the continuity of \(\gamma\).
 
-Let the problem is very complicated in this co-ordinate system, let \((U, y)\) be another chart. And this change of co-ordinate is facilitated by transition maps. We can summarize all this in the following cummatative diagram:
+Let the problem is very complicated in this co-ordinate system, let \((U, y)\) be another chart. And this change of co-ordinate is facilitated by transition maps. We can summarize all this in the following commutative diagram:
 \begin{figure}[H]
 	\centering
 	\begin{tikzcd}
