--- a/notes.tex
+++ b/notes.tex
@@ -1,70 +1,10 @@
-\documentclass[11pt, oneside, parskip=half-]{scrbook}
+\documentclass[oneside, parskip=half-]{scrbook}
 
 \usepackage[linear, secthm]{handout}
 \usepackage{scrhack}
 \usepackage[normalem]{ulem}
 
-
-%% New Commands %%
-\newcommand{\lecture}[1]{\noindent\rule[0.35em]{0.4\textwidth}{1pt} \hfill \fbox{\large\textsc{Lecture #1}} \hfill \rule[0.35em]{0.4\textwidth}{1pt}\addcontentsline{toc}{chapter}{\protect\numberline{}Lecture #1}}
-
-% Ch01 - Axiomatic Set Theory %
-\DeclareMathOperator{\id}{id}
-\DeclareMathOperator{\lxor}{\veebar}
-\DeclareMathOperator{\lnand}{\uparrow}
-\usepackage{stmaryrd}
-\DeclareMathOperator{\contra}{\lightning}
-% \DeclareMathOperator{\im}{im} % already defined as \img
-\newcommand{\0}{\emptyset}
-\DeclareMathOperator{\preimg}{preim}
-\DeclareMathAlphabet{\euscr}{U}{eus}{m}{n}
-\DeclareMathOperator{\powerset}{\euscr{P}}
-\DeclareMathOperator{\setIso}{\cong_{\text{set}}}
-\usetikzlibrary{cd}
-\renewcommand{\nsim}{\not\sim}
-\newcommand{\into}{\hookrightarrow}
-
-% Ch02 - Topological Spaces %
-\renewcommand{\O}{\mathcal{O}}
-\newcommand{\Ostd}{\mathcal{O}_{\text{std.}}}
-\newcommand{\Oq}[1]{\mathcal{O}_{\faktor{#1}{\sim}}}
-\DeclareMathOperator{\topIso}{\cong_{\text{top.}}}
-\DeclareMathOperator{\supp}{supp}
-\DeclareMathOperator{\dcup}{\dot{\cup}}
-\DeclareMathOperator{\grpIso}{\cong_{\text{grp}}}
-
-% Ch03 - Topological Manifolds and Bundles %
-\usetikzlibrary{decorations.markings}
-\DeclareMathOperator{\bdlIso}{\cong_{\text{bdl}}}
-\DeclareMathOperator{\proj}{proj}
-\newcommand{\A}{\mathscr{A}}
-\newcommand{\I}{\mathrm{i}}
-
-% Ch04 - Differentiable Manifolds %
-\usepackage{bbding}
-\newcommand{\flower}{{\scalebox{0.75}{\FiveFlowerOpen} }}
-\DeclareMathOperator{\diffIso}{\cong_{\text{diff}}}
-\DeclareMathOperator{\vecIso}{\cong_{\text{vec}}}
-\DeclareMathOperator{\Hom}{Hom}
-\DeclareSymbolFont{MnSyC}{U}{MnSymbolC}{m}{n}
-\DeclareMathSymbol{\diamondplus}{\mathbin}{MnSyC}{"7C}
-\DeclareMathSymbol{\diamonddot}{\mathbin}{MnSyC}{"7E}
-\DeclareMathOperator{\End}{End}
-\DeclareMathOperator{\Aut}{Aut}
-\usepackage{tensor}
-\DeclareMathOperator{\hateq}{\hat{=}}
-\DeclareMathOperator{\sgn}{sgn}
-\DeclareMathOperator{\vol}{vol}
-
-\DeclareFontFamily{U}{MnSymbolC}{}
-\DeclareFontShape{U}{MnSymbolC}{m}{n}{
-    <-6>  MnSymbolC5
-   <6-7>  MnSymbolC6
-   <7-8>  MnSymbolC7
-   <8-9>  MnSymbolC8
-   <9-10> MnSymbolC9
-  <10-12> MnSymbolC10
-  <12->   MnSymbolC12}{}
+\input{commands.tex}
 
 \makeatletter
 \def\input@path{{Ch01 - Axiomatic Set Theory/}{Ch02 - Topological Spaces/}{Ch03 - Topological Manifolds and Bundles/}{Ch04 - Differentiable Manifolds/}}
@@ -110,30 +50,30 @@
 \begin{document}
 \frontmatter
 \begin{titlepage}
-    \let\newpage\relax
-    \singhtitle
+	\let\newpage\relax
+	\singhtitle
 \end{titlepage}
 
 \chapter{Structure of this Course}
 \noindent In theoretical physics we mainly deal with three big part of mathematics, namely, `Analysis', `Algebra' and `Geometry'. And at the mutual intersection of these three, we have different branches of physics like `Quantum Mechanics', `General Relativity', `Statistical Mechanics', etc. see \cref{fig:structure}.
 
 \begin{figure}[H]
-    \centering
-    \includegraphics[width=0.4\textwidth]{lec01-math_struct.png}
-    \caption{Structure of Theoretical Physics}
-    \label{fig:structure}
+	\centering
+	\includegraphics[width=0.4\textwidth]{lec01-math_struct.png}
+	\caption{Structure of Theoretical Physics}
+	\label{fig:structure}
 \end{figure}\noindent
 This course mainly focuses on differential geometry and topology, and their applications in theoretical physics. And we will start with the basic propositional logic and set theory, and then move to the topology and geometry of manifolds, and then we will see the applications of these in physics. Following is the structure of this course:
 
 \begin{itemize}
-    \item Logic
-    \item Set Theory
-    \item Topology
-    \item Topological Manifolds
-    \item Differential Manifolds
-    \item Bundles
-    \item Geometry: Symplectic Geometry, Metric Geometry, etc.
-    \item Physics: Classical Mechanics, Electrodynamics, Quantum Mechanics, Statistical Mechanics, Special and General Relativity, etc.
+	\item Logic
+	\item Set Theory
+	\item Topology
+	\item Topological Manifolds
+	\item Differential Manifolds
+	\item Bundles
+	\item Geometry: Symplectic Geometry, Metric Geometry, etc.
+	\item Physics: Classical Mechanics, Electrodynamics, Quantum Mechanics, Statistical Mechanics, Special and General Relativity, etc.
 \end{itemize}
 
 
@@ -142,14 +82,14 @@ This course mainly focuses on differential geometry and topology, and their appl
 
 \mainmatter
 
-% chapter 01 - Axiomatic Set Theory
-\input{ch01.tex}
+% % chapter 01 - Axiomatic Set Theory
+% \input{ch01.tex}
 
-% chapter 02 - Topological Spaces
-\input{ch02.tex}
+% % chapter 02 - Topological Spaces
+% \input{ch02.tex}
 
-% chapter 03 - Topological Manifolds and Bundles
-\input{ch03.tex}
+% % chapter 03 - Topological Manifolds and Bundles
+% \input{ch03.tex}
 
 % chapter 04 - Differentiable Manifolds
 \input{ch04.tex}
