--- a/notes.tex
+++ b/notes.tex
@@ -82,14 +82,14 @@ This course mainly focuses on differential geometry and topology, and their appl
 
 \mainmatter
 
-% % chapter 01 - Axiomatic Set Theory
-% \input{ch01.tex}
+% chapter 01 - Axiomatic Set Theory
+\input{ch01.tex}
 
-% % chapter 02 - Topological Spaces
-% \input{ch02.tex}
+% chapter 02 - Topological Spaces
+\input{ch02.tex}
 
-% % chapter 03 - Topological Manifolds and Bundles
-% \input{ch03.tex}
+% chapter 03 - Topological Manifolds and Bundles
+\input{ch03.tex}
 
 % chapter 04 - Differentiable Manifolds
 \input{ch04.tex}
